--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,13 @@ header {
     padding: 20px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     position: relative;
 }
 
 .logo-container {
-    position: absolute;
-    left: 80px;
+    margin-right: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -112,6 +111,24 @@ main {
     color: #333333;
     margin-left: 10px;
 }
+
+.update h2 {
+    color: #ff7f50;
+}
+
+.patch h2 {
+    color: #20b2aa;
+}
+
+.hotfix h2 {
+    color: #ff4500;
+}
+
+/* Zwiększenie odstępów między kafelkami */
+#changelog {
+    gap: 20px;
+}
+
 /* Mobile responsiveness */
 @media (max-width: 768px) {
     header {
@@ -120,10 +137,8 @@ main {
     }
 
     .logo-container {
-        position: static;
+        margin-right: 0;
         margin-bottom: 20px;
-        width: 80px;
-        height: 80px;
     }
 
     .title-container h1 {
